cluster/core/longhorn/deployment-longhorn-driver-deployer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-driver-deployer
  namespace: longhorn-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: longhorn-driver-deployer
  template:
    metadata:
      labels:
        app: longhorn-driver-deployer
    spec:
      containers:
        - name: longhorn-driver-deployer
          image: longhornio/longhorn-manager:v1.1.1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          command:
          - longhorn-manager
          - -d
          - deploy-driver
          - --manager-image
          - longhornio/longhorn-manager:v1.1.1
          - --manager-url
          - http://longhorn-backend:9500/v1
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      - key: "CriticalAddonsOnly"
        operator: "Exists"
        effect: "NoExecute"
      - key: "StorageOnly"
        operator: "Exists"
        effect: "NoExecute"
      - key: "CriticalAddonsOnly"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "StorageOnly"
        operator: "Exists"
        effect: "NoSchedule"
#      nodeSelector:
#        worker: "yes"
#        storage: "yes"
#        master: "yes"
      serviceAccountName: longhorn-service-account
      securityContext:
        runAsUser: 0
