cluster/core/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-longhorn-ui
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: longhorn.k8s.aml.ink
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-ui
            port:
              number: 80
